# mrubyc-esp32

./: CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  main.c  mrbc_esp32_ledc.c  mrbc_esp32_sntp.c  mrbc_esp32_time.c  mrbc_esp32_time.h  mrblib.c
mrblib/: gps.rb  i2c.rb  otakara.rb
src/: master.rb
